cmake_minimum_required(VERSION 2.8.9)
project(GHOST_Shared)

#Options for building
option(SHARED_BUILD_IO "Build the IO package" ON )
option(SHARED_BUILD_DATETIME "Build the DateTime package" ON )
option(SHARED_BUILD_CXFORM "Builds the CXFORM package" ON )

message(STATUS "Building selected libraries")

### IO LIBRARY ###
if(SHARED_BUILD_IO)
    message(STATUS "BUILDING IO")
    add_subdirectory(${PROJECT_SOURCE_DIR}/io)

    GET_DIRECTORY_PROPERTY(IO_INCLUDES DIRECTORY io DEFINITION IO_INCLUDES)
    GET_DIRECTORY_PROPERTY(IO_LIBRARIES DIRECTORY io DEFINITION IO_LIBRARIES)

    message("SHARED: IO LIBRARIES: ${IO_LIBRARIES}")

    set(IO_INCLUDE_DIR ${IO_INCLUDES} ${PROJECT_SOURCE_DIR}/io)
    set(IO_LIBRARY_DIR ${PROJECT_BINARY_DIR}/io)
    set(IO_LIBRARIES ${IO_LIBRARIES} io )

    INCLUDE_DIRECTORIES(${IO_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/io)
    LINK_DIRECTORIES(${IO_LIBRARY_DIR})

    ##DEBUG##
    message(STATUS "IO include: ${IO_INCLUDE_DIR}")
    message(STATUS "IO libraries: ${IO_LIBRARY_DIR}")
endif()


### DATETIME LIBRARY ###
if(SHARED_BUILD_DATETIME)
    message(STATUS "BUILDING DATETIME")
    add_subdirectory(${PROJECT_SOURCE_DIR}/DateTime)

    GET_DIRECTORY_PROPERTY(DATETIME_INCLUDES DIRECTORY DateTime DEFINITION DATETIME_INCLUDES)
    GET_DIRECTORY_PROPERTY(DATETIME_LIBRARIES DIRECTORY DateTime DEFINITION DATETIME_LIBRARIES)

    set(DATETIME_INCLUDE_DIR ${DATETIME_INCLUDES} ${PROJECT_SOURCE_DIR}/DateTime)
    set(DATETIME_LIBRARY_DIR ${PROJECT_BINARY_DIR}/DateTime)
    set(DATETIME_LIBRARIES ${DATETIME_LIBRARIES} DateTime )

    INCLUDE_DIRECTORIES(${DATETIME_INCLUDE_DIR})
    LINK_DIRECTORIES(${DATETIME_LIBRARY_DIR})

    ##DEBUG##
    message(STATUS "DateTime include: ${DATETIME_INCLUDE_DIR}")
    message(STATUS "DateTime include: ${DATETIME_LIBRARY_DIR}")
endif()

### CXFORM LIBRARY ###
if(SHARED_BUILD_CXFORM)
    message(STATUS "BUILDING CXFORM")
    add_subdirectory(${PROJECT_SOURCE_DIR}/cxform)

    GET_DIRECTORY_PROPERTY(CXFORM_INCLUDES DIRECTORY cxform DEFINITION CXFORM_INCLUDES)
    GET_DIRECTORY_PROPERTY(CXFORM_LIBRARIES DIRECTORY cxform DEFINITION CXFORM_LIBRARIES)

    set(CXFORM_INCLUDE_DIR ${CXFORM_INCLUDES} ${PROJECT_SOURCE_DIR}/cxform)
    set(CXFORM_LIBRARY_DIR ${PROJECT_BINARY_DIR}/cxform)
    set(CXFORM_LIBRARIES ${CXFORM_LIBRARIES} cxform )

    INCLUDE_DIRECTORIES(${CXFORM_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/cxform)
    LINK_DIRECTORIES(${CXFORM_LIBRARY_DIR})

    ##DEBUG##
    message(STATUS "cxform include: ${CXFORM_INCLUDE_DIR}")
    message(STATUS "cxform libraries: ${CXFORM_LIBRARY_DIR}")
endif()

INSTALL(FILES
            ${PROJECT_BINARY_DIR}/cxform/${CMAKE_STATIC_LIBRARY_PREFIX}cxform${CMAKE_STATIC_LIBRARY_SUFFIX}
            ${PROJECT_BINARY_DIR}/io/${CMAKE_STATIC_LIBRARY_PREFIX}io${CMAKE_STATIC_LIBRARY_SUFFIX}
            ${PROJECT_BINARY_DIR}/DateTime/${CMAKE_STATIC_LIBRARY_PREFIX}DateTime${CMAKE_STATIC_LIBRARY_SUFFIX}
        DESTINATION lib/)

INSTALL(FILES
        ${PROJECT_SOURCE_DIR}/DateTime/DateTime.h
        ${PROJECT_SOURCE_DIR}/io/Io.hpp
        ${PROJECT_SOURCE_DIR}/cxform/cxform.h
        DESTINATION include/)



